# tfg-code

./: .gitmodules  README.md
offline/: BO.hpp  BO.tpp  CMakeLists.txt  consts_calculator.cpp  evaluation.hpp  evaluation.tpp  main.cpp  scaling.cpp  scaling.hpp  utils.hpp
online/: BO.cpp  Makefile  README.md  bidirectional_chemical_synapse_BO.cpp  bidirectional_chemical_synapse_BO.h  evaluation.cpp  utils.hpp
rthybrid_hindmarsh_rose_1984_neuron_v2/: Makefile  README.md  rthybrid_hindmarsh_rose_1984_neuron.cpp  rthybrid_hindmarsh_rose_1984_neuron.h
